Fix UI
- Generated URL was not updated when Help was rendered post page load
- inputs were badly displayed due to overlap with input in Help CSS

--- a/app/src/Help/HelpPanel.css
+++ b/app/src/Help/HelpPanel.css
@@ -71,6 +71,7 @@ h3 {
   content: "Green"
 }
 
-input {
+#help-panel input {
   width: 100%;
+  padding: 3px;
 }
